; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_aead.c_crypto_aead_exit_tfm.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_aead.c_crypto_aead_exit_tfm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.crypto_aead = type { i32 }
%struct.aead_alg = type { i32 (%struct.crypto_aead*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_tfm*)* @crypto_aead_exit_tfm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @crypto_aead_exit_tfm(%struct.crypto_tfm* %0) #0 {
  %2 = alloca %struct.crypto_tfm*, align 8
  %3 = alloca %struct.crypto_aead*, align 8
  %4 = alloca %struct.aead_alg*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %2, align 8
  %5 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %6 = call %struct.crypto_aead* @__crypto_aead_cast(%struct.crypto_tfm* %5)
  store %struct.crypto_aead* %6, %struct.crypto_aead** %3, align 8
  %7 = load %struct.crypto_aead*, %struct.crypto_aead** %3, align 8
  %8 = call %struct.aead_alg* @crypto_aead_alg(%struct.crypto_aead* %7)
  store %struct.aead_alg* %8, %struct.aead_alg** %4, align 8
  %9 = load %struct.aead_alg*, %struct.aead_alg** %4, align 8
  %10 = getelementptr inbounds %struct.aead_alg, %struct.aead_alg* %9, i32 0, i32 0
  %11 = load i32 (%struct.crypto_aead*)*, i32 (%struct.crypto_aead*)** %10, align 8
  %12 = load %struct.crypto_aead*, %struct.crypto_aead** %3, align 8
  %13 = call i32 %11(%struct.crypto_aead* %12)
  ret void
}

declare dso_local %struct.crypto_aead* @__crypto_aead_cast(%struct.crypto_tfm*) #1

declare dso_local %struct.aead_alg* @crypto_aead_alg(%struct.crypto_aead*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
